[package]
authors = ["The Rust Project Developers"]
name = "rustc_save_analysis"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_save_analysis"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
log = "0.4"
rls-data = "0.19"
rls-span = "0.5"
rustc = { path = "../librustc" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_codegen_utils = { path = "../librustc_codegen_utils" }
rustc_target = { path = "../librustc_target" }
rustc_typeck = { path = "../librustc_typeck" }
serde = "1.0"
serde_json = "1.0"
syntax = { path = "../libsyntax" }
syntax_pos = { path = "../libsyntax_pos" }
